--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@vssue/api-github-v4": "^1.4.7",
         "@vssue/vuepress-plugin-vssue": "^1.4.8",
+        "axios": "^1.3.5",
         "moment": "^2.29.1"
     },
     "devDependencies": {
